# ByteTrack-cpp-ai-edge-contest-5

./: .gitignore  CMakeLists.txt  Dockerfile
app/evaluation_code/: evaluate.py  readme.txt
app/generate_submit_file/: .gitignore  CMakeLists.txt  combine_submit.py  main.cpp  riscv_imm.h  run.bash  yolo_runner.h
data/ai-edge-contest-5/detection_results/tiny_yolov4/: test_01_detection_1.json
data/ai-edge-contest-5/test/detection_results/tiny_yolov4/: test_00_detection_0.json  test_00_detection_1.json  test_01_detection_0.json
data/ai-edge-contest-5/test/detection_results/tiny_yolov4_dpu/: test_00_detection_result_0.json  test_00_detection_result_1.json  test_01_detection_result_0.json  test_01_detection_result_1.json  test_02_detection_result_0.json  test_02_detection_result_1.json  test_03_detection_result_0.json  test_03_detection_result_1.json  test_04_detection_result_0.json  test_04_detection_result_1.json  test_05_detection_result_0.json  test_05_detection_result_1.json  test_06_detection_result_0.json  test_06_detection_result_1.json  test_07_detection_result_0.json  test_07_detection_result_1.json  test_08_detection_result_0.json  test_08_detection_result_1.json  test_09_detection_result_0.json  test_09_detection_result_1.json  test_10_detection_result_0.json  test_10_detection_result_1.json  test_11_detection_result_0.json  test_11_detection_result_1.json  test_12_detection_result_0.json  test_12_detection_result_1.json  test_13_detection_result_0.json  test_13_detection_result_1.json  test_14_detection_result_0.json  test_14_detection_result_1.json  test_15_detection_result_0.json  test_15_detection_result_1.json  test_16_detection_result_0.json  test_16_detection_result_1.json  test_17_detection_result_0.json  test_17_detection_result_1.json  test_18_detection_result_0.json  test_18_detection_result_1.json  test_19_detection_result_0.json  test_19_detection_result_1.json  (+108 more)
data/ai-edge-contest-5/test/detection_results/tiny_yolov4_host/: test_00_detection_result_0.json  test_00_detection_result_1.json  test_01_detection_result_0.json  test_01_detection_result_1.json  test_02_detection_result_0.json  test_02_detection_result_1.json  test_03_detection_result_0.json  test_03_detection_result_1.json  test_04_detection_result_0.json  test_04_detection_result_1.json  test_05_detection_result_0.json  test_05_detection_result_1.json  test_06_detection_result_0.json  test_06_detection_result_1.json  test_07_detection_result_0.json  test_07_detection_result_1.json  test_08_detection_result_0.json  test_08_detection_result_1.json  test_09_detection_result_0.json  test_09_detection_result_1.json  test_10_detection_result_0.json  test_10_detection_result_1.json  test_11_detection_result_0.json  test_11_detection_result_1.json  test_12_detection_result_0.json  test_12_detection_result_1.json  test_13_detection_result_0.json  test_13_detection_result_1.json  test_14_detection_result_0.json  test_14_detection_result_1.json  test_15_detection_result_0.json  test_15_detection_result_1.json  test_16_detection_result_0.json  test_16_detection_result_1.json  test_17_detection_result_0.json  test_17_detection_result_1.json  test_18_detection_result_0.json  test_18_detection_result_1.json  test_19_detection_result_0.json  test_19_detection_result_1.json  (+108 more)
data/ai-edge-contest-5/train/detection_results/ground_truth/: train_00_detection_result_0.json  train_00_detection_result_1.json  train_01_detection_0.json  train_01_detection_result_1.json  train_02_detection_0.json  train_02_detection_1.json  train_03_detection_result_0.json  train_03_detection_result_1.json  train_04_detection_result_0.json  train_04_detection_result_1.json  train_05_detection_0.json  train_05_detection_1.json  train_06_detection_0.json  train_06_detection_1.json  train_07_detection_0.json  train_07_detection_1.json  train_08_detection_0.json  train_08_detection_1.json  train_09_detection_0.json  train_09_detection_1.json  train_10_detection_result_0.json  train_10_detection_result_1.json  train_11_detection_1.json  train_11_detection_result_0.json  train_12_detection_0.json  train_12_detection_1.json  train_13_detection_0.json  train_13_detection_result_1.json  train_14_detection_1.json  train_14_detection_result_0.json  train_15_detection_result_0.json  train_15_detection_result_1.json  train_16_detection_1.json  train_16_detection_result_0.json  train_17_detection_0.json  train_17_detection_1.json  train_18_detection_result_0.json  train_18_detection_result_1.json  train_19_detection_0.json  train_19_detection_1.json  (+10 more)
data/ai-edge-contest-5/train/detection_results/tiny_yolov4_host/: train_00_detection_result_0.json  train_00_detection_result_1.json  train_01_detection_result_0.json  train_01_detection_result_1.json  train_02_detection_result_0.json  train_02_detection_result_1.json  train_03_detection_result_0.json  train_03_detection_result_1.json  train_04_detection_result_0.json  train_04_detection_result_1.json  train_05_detection_result_0.json  train_05_detection_result_1.json  train_06_detection_result_0.json  train_06_detection_result_1.json  train_07_detection_result_0.json  train_07_detection_result_1.json  train_08_detection_result_0.json  (+33 more)
include/ByteTrack/: BYTETracker.h  FeatureProvider.h  KalmanFilter.h  LBPFeatureExtractor.h  Rect.h  STrack.h  lapjv.h  riscv_reset.h
src/: BYTETracker.cpp  FeatureProvider.cpp  LBPFeatureExtractor.cpp  Rect.cpp  STrack.cpp  lapjv.cpp
